name: netherworld
version: 0.0.0.0
synopsis: A simple RPG
license: FreeBSD
license-file: LICENSE
author: Linus Arver
maintainer: linusarver@gmail.com
category: Game
build-type: Simple
cabal-version: >=1.10

executable netherworld
  main-is: main.hs
  default-language: Haskell2010
  other-extensions: RecordWildCards
  hs-source-dirs: src
  build-depends:
      base >= 4.7 && < 4.8
    , containers >= 0.5 && < 0.6
    , text >= 1.1.1.3 && < 2.0
    , vector >= 0.10.11.0 && < 0.11
