name: netherworld
version: 0.0.0.0
synopsis: A simple RPG
license: FreeBSD
license-file: LICENSE
author: Linus Arver
maintainer: linusarver@gmail.com
category: Game
build-type: Simple
cabal-version: >=1.10

executable netherworld
  main-is: main.hs
  default-language: Haskell2010
  other-extensions: RecordWildCards
  hs-source-dirs: src
  build-depends:
      base >= 4.7 && < 4.8
    , bytestring >= 0.10.4.0 && < 0.11
    , containers >= 0.5 && < 0.6
    , cryptohash >= 0.11.5 && < 0.12
    , mwc-random >= 0.13.1.2 && < 0.14
    , primitive >= 0.5.3.0 && < 0.6
    , text >= 1.1.1.3 && < 2.0
    , time >= 1.4.2 && < 1.5
    , vector >= 0.10.11.0 && < 0.11
